--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -39,7 +39,10 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-      - name: Set up JDK 21
+      - name: Check out the Git repository
+        uses: actions/checkout@v4
+
+      - name: Set up Java toolchain
         uses: actions/setup-java@v4
         with:
           distribution: "temurin"
@@ -47,7 +50,6 @@ jobs:
           cache: "gradle"
 
       - name: Analyze with SonarCloud
-
         # You can pin the exact commit or the version.
         # uses: SonarSource/sonarcloud-github-action@de2e56b42aa84d0b1c5b622644ac17e505c9a049
         uses: SonarSource/sonarcloud-github-action@de2e56b42aa84d0b1c5b622644ac17e505c9a049
